Handle error and progress states for Market Price chart screen

--- a/feature_charts/build.gradle
+++ b/feature_charts/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation project(Modules.app)
     implementation project(Modules.commonData)
     implementation project(Modules.commonDomain)
+    implementation project(Modules.commonPresentation)
 
     implementation AndroidX.appCompat
     implementation AndroidX.coreKtx
