--- a/common_domain/build.gradle
+++ b/common_domain/build.gradle
@@ -1,24 +1,4 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
-android {
-
-    compileSdkVersion AndroidConfig.compileSdkVersion
-
-    defaultConfig {
-        minSdkVersion AndroidConfig.minSdkVersion
-        targetSdkVersion AndroidConfig.targetSdkVersion
-        versionCode AppVersion.code
-        versionName AppVersion.name
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'kotlin'
 
 dependencies {
 
